fix old notebook files

--- a/Create_dataset.ipynb
+++ b/Create_dataset.ipynb
@@ -131,7 +131,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
+              "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv\u2026"
             ],
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
@@ -780,7 +780,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>15120 rows × 2 columns</p>\n",
+              "<p>15120 rows \u00d7 2 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d558045e-2d45-4b16-b21f-de7a1bbe16bc')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -1241,7 +1241,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_021411e45d274741941306381394d61b",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_d402310358624a3280cdd2df18f01452",
             "value": "Resolving data files: 100%"
           }
@@ -1286,7 +1286,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_01f6fa3888ee446b976451b0863611f4",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_772e683ab23a42a884bdcc37f85e69b5",
             "value": " 420/420 [00:00&lt;00:00, 20868.91it/s]"
           }
@@ -1583,7 +1583,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_d1044072dbd34527af445803341ab056",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_1bb56a3325674b99b03f4ad164a633a6",
             "value": "Downloading data files: 100%"
           }
@@ -1628,7 +1628,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_3461ae32a412431ea60af7dd9d0b049b",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_e8404e3a214b417ca3dd5d9c5508b23d",
             "value": " 420/420 [00:00&lt;00:00, 14566.69it/s]"
           }
@@ -1925,7 +1925,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_8137445367a64b768032539f69608c75",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_ca85490d31c54f69b4656c65e35f5c56",
             "value": "Downloading data files: "
           }
@@ -1970,7 +1970,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_f61c8eb453db49aeac724c7302c7a2de",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_079d43a065c94701b98c98e7c6ef68e1",
             "value": " 0/0 [00:00&lt;?, ?it/s]"
           }
@@ -2267,7 +2267,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_15b49da41340494ba3cde18603c49829",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_dd115a7d3426431ea03aa8057e579f89",
             "value": "Extracting data files: "
           }
@@ -2312,7 +2312,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_fac4aff6a2004d4094b8f88ac5f77fc3",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_0e20dde000eb4f24828b5fb3b29704de",
             "value": " 0/0 [00:00&lt;?, ?it/s]"
           }
@@ -2609,7 +2609,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_7af81739432a4507806e8a923f6e4548",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_cd4c5f0bf82c48f28a13c626a7caea49",
             "value": "Generating test split: "
           }
@@ -2654,7 +2654,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_f90d7d6882834ce091a2481daad89de5",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_2221c7f1b40e407899cd2396293ec4ac",
             "value": " 0/0 [00:00&lt;?, ? examples/s]"
           }
@@ -2951,7 +2951,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_0ee855164e2e4654b6bfd7ad578cc1a5",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_127a7a5f549843fcbe18962ad60b9467",
             "value": "100%"
           }
@@ -2996,7 +2996,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_9966d878ddca48c7869cec692af2e664",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_5f4674d2d3b44a349ebbc1d31a3c2dd7",
             "value": " 1/1 [00:00&lt;00:00, 52.39it/s]"
           }
@@ -3293,7 +3293,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_a616dbcb4ab94f03bf400438e95989e9",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_332f8293eafd47099fd20cd78e37f83a",
             "value": "Map: 100%"
           }
@@ -3338,7 +3338,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_d933120cf12a42b58095e6baa678da5d",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_b20fb464ac5047fa99eba9b465f6d738",
             "value": " 420/420 [00:00&lt;00:00, 1512.72 examples/s]"
           }
@@ -3635,7 +3635,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_afff69ee959044c9ba7fc05a4695dc50",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_6ef7db3d26864665b5e009f44b544816",
             "value": "Pushing dataset shards to the dataset hub: 100%"
           }
@@ -3680,7 +3680,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_7027343c3eb646e8a2bfa450559eabb6",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_a2c6ac4fa29d4fd0a7505f53ee4ecd58",
             "value": " 1/1 [00:24&lt;00:00, 24.69s/it]"
           }
@@ -3977,7 +3977,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_ea97e8653bf74d0ca3d8642a082abdf0",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_79f24bfaa0434b0b83fe64718cc16cb0",
             "value": "Creating parquet from Arrow format: 100%"
           }
@@ -4022,7 +4022,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_9a686edd65fd4473b520c1af52855b3d",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_3ce8c77a54014315bcb46b75d6d8d6af",
             "value": " 5/5 [00:00&lt;00:00, 11.42ba/s]"
           }
@@ -4319,7 +4319,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_8d864132a4404ac985bd281f157f4d28",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_14b24bbc50294969a8593a3142513536",
             "value": "Upload 1 LFS files: 100%"
           }
@@ -4364,7 +4364,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_31fcbd5300c44af1b2af9238dc4daf3e",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_920aee3c8ba646208cf3fd02ff4bccdb",
             "value": " 1/1 [00:04&lt;00:00,  4.10s/it]"
           }
@@ -4663,7 +4663,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_e745474126d04674b505820c6796fd82",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_06ecff41161246b49111f043216f0e40",
             "value": "<center> <img\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.svg\nalt='Hugging Face'> <br> Copy a token from <a\nhref=\"https://huggingface.co/settings/tokens\" target=\"_blank\">your Hugging Face\ntokens page</a> and paste it below. <br> Immediately click login after copying\nyour token or it might be stored in plain text in this notebook file. </center>"
           }
@@ -4686,7 +4686,7 @@
             "description_tooltip": null,
             "disabled": false,
             "layout": "IPY_MODEL_8f555fd30fac430d99c635df45e88504",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_f603839aeedf47d6b2304fc9d3c3bbb1",
             "value": ""
           }
@@ -4751,7 +4751,7 @@
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_ab7263c8fa964db38ad7f41f73e1863b",
-            "placeholder": "​",
+            "placeholder": "\u200b",
             "style": "IPY_MODEL_5ad8ce8c6c264e4997dbcef14d76d63f",
             "value": "\n<b>Pro Tip:</b> If you don't already have one, you can create a dedicated\n'notebooks' token with 'write' access, that you can then easily reuse for all\nnotebooks. </center>"
           }
@@ -5144,7 +5144,8 @@
             "description_width": ""
           }
         }
-      }
+      },
+      "state": {}
     }
   },
   "nbformat": 4,
